<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Kelola -->
    <group android:id="@+id/group_manage" android:checkableBehavior="none">
        <item android:id="@+id/nav_refresh" android:icon="@drawable/ic_refresh" android:title="@string/nav_refresh" />
        <item android:id="@+id/nav_sort" android:icon="@drawable/ic_sort" android:title="@string/nav_sort" />
        <item android:id="@+id/nav_batch" android:icon="@drawable/ic_batch" android:title="@string/nav_batch" />
        <item android:id="@+id/nav_terminal" android:icon="@drawable/ic_terminal" android:title="@string/nav_terminal" />
        <item android:id="@+id/nav_tweaks" android:icon="@drawable/ic_tune" android:title="@string/nav_tweaks" />
        <item android:id="@+id/nav_backup" android:icon="@drawable/ic_backup" android:title="@string/nav_backup" />
        <item android:id="@+id/nav_restore" android:icon="@drawable/ic_restore" android:title="@string/nav_restore" />
    </group>
    <!-- Diagnostik & Riwayat -->
    <group android:id="@+id/group_diag" android:checkableBehavior="none">
        <item android:id="@+id/nav_history" android:icon="@drawable/ic_history" android:title="@string/nav_history" />
        <item android:id="@+id/nav_report" android:icon="@drawable/ic_report" android:title="@string/nav_report" />
        <item android:id="@+id/nav_copy_report" android:icon="@drawable/ic_copy" android:title="@string/nav_copy_report" />
    </group>
    <!-- Bantuan, Komunitas & Info -->
    <group android:id="@+id/group_help" android:checkableBehavior="none">
        <item android:id="@+id/nav_channel" android:icon="@drawable/ic_channel" android:title="@string/nav_channel" />
        <item android:id="@+id/nav_feedback" android:icon="@drawable/ic_feedback" android:title="@string/nav_feedback" />
        <item android:id="@+id/nav_update" android:icon="@drawable/ic_update" android:title="@string/nav_update" />
        <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings" android:title="@string/nav_settings" />
        <item android:id="@+id/nav_shizuku" android:icon="@drawable/ic_shizuku" android:title="@string/nav_shizuku" />
        <item android:id="@+id/nav_overlay" android:icon="@drawable/ic_overlay" android:title="@string/nav_overlay" />
        <item android:id="@+id/nav_about" android:icon="@drawable/ic_info" android:title="@string/nav_about" />
    </group>
</menu>
